force-app/main/default/objects/RW_EOI__c/RW_EOI__c.object-meta.xml
<CustomObject>
    <label>EOI</label>
    <nameField>
        <displayFormat>EOI-{0000000}</displayFormat>
        <label>EOI Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EOI</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>