force-app/main/default/objects/RW_EOI__c/fields/BillDesk_Terms_And_Conditions__c.field-meta.xml
<CustomField>
    <fullName>BillDesk_Terms_And_Conditions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BillDesk Terms And Conditions</label>
    <type>Checkbox</type>
</CustomField>