force-app/main/default/objects/RW_EOI__c/fields/Channel_Partner_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_Contact_No__c</fullName>
    <label>Channel Partner Contact No</label>
    <type>Phone</type>
</CustomField>