force-app/main/default/objects/RW_EOI__c/fields/Customer_GST_No__c.field-meta.xml
<CustomField>
    <fullName>Customer_GST_No__c</fullName>
    <label>Customer GST No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>