force-app/main/default/objects/RW_EOI__c/fields/Draft_Cheque_Date__c.field-meta.xml
<CustomField>
    <fullName>Draft_Cheque_Date__c</fullName>
    <label>Draft / Cheque Date</label>
    <type>Date</type>
</CustomField>