force-app/main/default/objects/RW_EOI__c/fields/Draft_Cheque_No__c.field-meta.xml
<CustomField>
    <fullName>Draft_Cheque_No__c</fullName>
    <label>Draft / Cheque No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>