force-app/main/default/objects/RW_EOI__c/fields/EOI_Amount__c.field-meta.xml
<CustomField>
    <fullName>EOI_Amount__c</fullName>
    <label>EOI Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>