force-app/main/default/objects/RW_EOI__c/fields/Home_Loan__c.field-meta.xml
<CustomField>
    <fullName>Home_Loan__c</fullName>
    <label>Home Loan</label>
    <length>10</length>
    <type>Text</type>
</CustomField>