force-app/main/default/objects/RW_EOI__c/fields/Landline_No__c.field-meta.xml
<CustomField>
    <fullName>Landline_No__c</fullName>
    <label>Landline No</label>
    <length>40</length>
    <type>Text</type>
</CustomField>