force-app/main/default/objects/RW_EOI__c/fields/Preferred_Size__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Size__c</fullName>
    <label>Preferred Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>