force-app/main/default/objects/RW_EOI__c/fields/RW_Alternate_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>RW_Alternate_Contact_No__c</fullName>
    <label>Alternate Contact No</label>
    <type>Phone</type>
</CustomField>