force-app/main/default/objects/RW_EOI__c/fields/RW_Any_other_preference_please_specify__c.field-meta.xml
<CustomField>
    <fullName>RW_Any_other_preference_please_specify__c</fullName>
    <label>Any other preference, please specify</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>