force-app/main/default/objects/RW_EOI__c/fields/RW_Application_Source__c.field-meta.xml
<CustomField>
    <fullName>RW_Application_Source__c</fullName>
    <formula>TEXT(Opportunity__r.Walkin_Source__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Source</label>
    <type>Text</type>
</CustomField>