force-app/main/default/objects/RW_EOI__c/fields/RW_Approver__c.field-meta.xml
<CustomField>
    <fullName>RW_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>EOI</relationshipName>
    <type>Lookup</type>
</CustomField>