force-app/main/default/objects/RW_EOI__c/fields/RW_Cancellation_Email_Document__c.field-meta.xml
<CustomField>
    <fullName>RW_Cancellation_Email_Document__c</fullName>
    <label>Cancellation Email Document</label>
    <length>100</length>
    <type>Text</type>
</CustomField>