force-app/main/default/objects/RW_EOI__c/fields/RW_Cancellation_Email_Link__c.field-meta.xml
<CustomField>
    <fullName>RW_Cancellation_Email_Link__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+ RW_Cancellation_Email_Document__c , &quot;Cancellation Email&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cancellation Email Link</label>
    <type>Text</type>
</CustomField>