force-app/main/default/objects/RW_EOI__c/fields/RW_Cancellation_Email_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>RW_Cancellation_Email_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancellation Email Uploaded?</label>
    <type>Checkbox</type>
</CustomField>