force-app/main/default/objects/RW_EOI__c/fields/RW_Channel_Partner_s_City__c.field-meta.xml
<CustomField>
    <fullName>RW_Channel_Partner_s_City__c</fullName>
    <formula>Opportunity__r.RW_Walkin_Channel_Partner__r.City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel Partner&apos;s City</label>
    <type>Text</type>
</CustomField>