force-app/main/default/objects/RW_EOI__c/fields/RW_Channel_Partner_s_Company__c.field-meta.xml
<CustomField>
    <fullName>RW_Channel_Partner_s_Company__c</fullName>
    <label>Channel Partner&apos;s Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>