force-app/main/default/objects/RW_EOI__c/fields/RW_Channel_Partner_s_Name__c.field-meta.xml
<CustomField>
    <fullName>RW_Channel_Partner_s_Name__c</fullName>
    <formula>IF( NOT( ISBLANK(Opportunity__r.RW_Walkin_Channel_Partner__r.Name ) ) , Opportunity__r.RW_Walkin_Channel_Partner__r.Name,   Opportunity__r.Walkin_Unregistered_ChannelPartner_Name__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel Partner&apos;s Name</label>
    <type>Text</type>
</CustomField>