force-app/main/default/objects/RW_EOI__c/fields/RW_Closing_Type__c.field-meta.xml
<CustomField>
    <fullName>RW_Closing_Type__c</fullName>
    <formula>TEXT(Opportunity__r.Closing_type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closing Type</label>
    <type>Text</type>
</CustomField>