force-app/main/default/objects/RW_EOI__c/fields/RW_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>RW_Company_Name__c</fullName>
    <label>Company Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>