force-app/main/default/objects/RW_EOI__c/fields/RW_Country_Phone_Code__c.field-meta.xml
<CustomField>
    <fullName>RW_Country_Phone_Code__c</fullName>
    <label>Country Phone Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Code</valueSetName>
    </valueSet>
</CustomField>