force-app/main/default/objects/RW_EOI__c/fields/RW_Date_of_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>RW_Date_of_Cancellation__c</fullName>
    <label>Date of Cancellation</label>
    <type>Date</type>
</CustomField>