force-app/main/default/objects/RW_EOI__c/fields/RW_Designation__c.field-meta.xml
<CustomField>
    <fullName>RW_Designation__c</fullName>
    <label>Designation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Advocate</fullName>
            </value>
            <value>
                <fullName>Analyst</fullName>
            </value>
            <value>
                <fullName>Application Engineer</fullName>
            </value>
            <value>
                <fullName>Area Manager</fullName>
            </value>
            <value>
                <fullName>Assistant Engineer</fullName>
            </value>
            <value>
                <fullName>Assistant Manager</fullName>
            </value>
            <value>
                <fullName>Assistant Professor</fullName>
            </value>
            <value>
                <fullName>Assistant Project Manager</fullName>
            </value>
            <value>
                <fullName>Assistant Vice President</fullName>
            </value>
            <value>
                <fullName>Associate Consultant</fullName>
            </value>
            <value>
                <fullName>Associate Director</fullName>
            </value>
            <value>
                <fullName>Associate Vice President</fullName>
            </value>
            <value>
                <fullName>Branch Head</fullName>
            </value>
            <value>
                <fullName>Branch Manager</fullName>
            </value>
            <value>
                <fullName>Branch Sales Manager</fullName>
            </value>
            <value>
                <fullName>Business Consultant</fullName>
            </value>
            <value>
                <fullName>Business Head</fullName>
            </value>
            <value>
                <fullName>Business Manager</fullName>
            </value>
            <value>
                <fullName>CEO and MD</fullName>
            </value>
            <value>
                <fullName>CFO</fullName>
            </value>
            <value>
                <fullName>Chairman</fullName>
            </value>
            <value>
                <fullName>Chartered Accountant</fullName>
            </value>
            <value>
                <fullName>Chief Manager</fullName>
            </value>
            <value>
                <fullName>Chief People Officer</fullName>
            </value>
            <value>
                <fullName>Civil Engineer</fullName>
            </value>
            <value>
                <fullName>Co - Founder</fullName>
            </value>
            <value>
                <fullName>Construction Head</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Corporate Head</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>