force-app/main/default/objects/RW_EOI__c/fields/RW_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>RW_Document_Number__c</fullName>
    <label>Document Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>