force-app/main/default/objects/RW_EOI__c/fields/RW_Document_Proof__c.field-meta.xml
<CustomField>
    <fullName>RW_Document_Proof__c</fullName>
    <label>Document Proof</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RW_Residential_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Driving License</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Electricity Bill</fullName>
            </value>
            <value>
                <fullName>Aadhar Card</fullName>
            </value>
            <value>
                <fullName>Voter’s ID Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>