force-app/main/default/objects/RW_EOI__c/fields/RW_EOI_Ack_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>RW_EOI_Ack_Bank_Name__c</fullName>
    <label>EOI Ack Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>