force-app/main/default/objects/RW_EOI__c/fields/RW_EOI_Ack_Currency__c.field-meta.xml
<CustomField>
    <fullName>RW_EOI_Ack_Currency__c</fullName>
    <label>EOI Ack Currency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>