force-app/main/default/objects/RW_EOI__c/fields/RW_EOI_Ack_Date__c.field-meta.xml
<CustomField>
    <fullName>RW_EOI_Ack_Date__c</fullName>
    <label>EOI Ack Date</label>
    <type>Date</type>
</CustomField>