force-app/main/default/objects/RW_EOI__c/fields/RW_EOI_Ack_Payment_Number__c.field-meta.xml
<CustomField>
    <fullName>RW_EOI_Ack_Payment_Number__c</fullName>
    <label>EOI Ack Payment Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>