force-app/main/default/objects/RW_EOI__c/fields/RW_EOI_Acknowledgement_Sent_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>RW_EOI_Acknowledgement_Sent_Date_Time__c</fullName>
    <label>EOI Acknowledgement Sent Date/Time</label>
    <type>DateTime</type>
</CustomField>