force-app/main/default/objects/RW_EOI__c/fields/RW_EOI_Acknowledgment_Sent__c.field-meta.xml
<CustomField>
    <fullName>RW_EOI_Acknowledgment_Sent__c</fullName>
    <label>EOI Acknowledgment Sent?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>