force-app/main/default/objects/RW_EOI__c/fields/RW_EOI_Link_Expiry__c.field-meta.xml
<CustomField>
    <fullName>RW_EOI_Link_Expiry__c</fullName>
    <label>EOI Link Expiry</label>
    <type>DateTime</type>
</CustomField>