force-app/main/default/objects/RW_EOI__c/fields/RW_Locality__c.field-meta.xml
<CustomField>
    <fullName>RW_Locality__c</fullName>
    <formula>TEXT(Opportunity__r.Account.Locality__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Locality</label>
    <type>Text</type>
</CustomField>