force-app/main/default/objects/RW_EOI__c/fields/RW_Mailing_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>RW_Mailing_Address_Line_1__c</fullName>
    <label>Mailing Address Line 1</label>
    <length>60</length>
    <type>Text</type>
</CustomField>