force-app/main/default/objects/RW_EOI__c/fields/RW_Mailing_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>RW_Mailing_Address_Line_2__c</fullName>
    <label>Mailing Address Line 2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>