force-app/main/default/objects/RW_EOI__c/fields/RW_Mailing_and_Permanent_Address_Same__c.field-meta.xml
<CustomField>
    <fullName>RW_Mailing_and_Permanent_Address_Same__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Mailing and Permanent Address Same?</label>
    <type>Checkbox</type>
</CustomField>