force-app/main/default/objects/RW_EOI__c/fields/RW_Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>RW_Mailing_City__c</fullName>
    <label>Mailing City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RW_Mailing_State__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Adoni</fullName>
            </value>
            <value>
                <fullName>Anantapur</fullName>
            </value>
            <value>
                <fullName>Bhimavaram</fullName>
            </value>
            <value>
                <fullName>Chittoor</fullName>
            </value>
            <value>
                <fullName>Eluru</fullName>
            </value>
            <value>
                <fullName>Guntur</fullName>
            </value>
            <value>
                <fullName>Hindupur</fullName>
            </value>
            <value>
                <fullName>Kadapa</fullName>
            </value>
            <value>
                <fullName>Kakinada</fullName>
            </value>
            <value>
                <fullName>Kurnool</fullName>
            </value>
            <value>
                <fullName>Madanapalle</fullName>
            </value>
            <value>
                <fullName>Nandyal</fullName>
            </value>
            <value>
                <fullName>Narasaraopet</fullName>
            </value>
            <value>
                <fullName>Nellore</fullName>
            </value>
            <value>
                <fullName>Ongole</fullName>
            </value>
            <value>
                <fullName>Prodattur</fullName>
            </value>
            <value>
                <fullName>Rajahmundry</fullName>
            </value>
            <value>
                <fullName>Srikakulam</fullName>
            </value>
            <value>
                <fullName>Tadepalligudem</fullName>
            </value>
            <value>
                <fullName>Tenali</fullName>
            </value>
            <value>
                <fullName>Tirupati</fullName>
            </value>
            <value>
                <fullName>Vijayawada</fullName>
            </value>
            <value>
                <fullName>Vishakhapatnam</fullName>
            </value>
            <value>
                <fullName>Vizianagaram</fullName>
            </value>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Warangal</fullName>
            </value>
            <value>
                <fullName>Nizamabad</fullName>
            </value>
            <value>
                <fullName>Karimnagar</fullName>
            </value>
            <value>
                <fullName>Ramagundam</fullName>
            </value>
            <value>
                <fullName>Khammam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>