force-app/main/default/objects/RW_EOI__c/fields/RW_Mailing_Pin__c.field-meta.xml
<CustomField>
    <fullName>RW_Mailing_Pin__c</fullName>
    <label>Mailing Pin</label>
    <length>50</length>
    <type>Text</type>
</CustomField>