force-app/main/default/objects/RW_EOI__c/fields/RW_Name_of_Company__c.field-meta.xml
<CustomField>
    <fullName>RW_Name_of_Company__c</fullName>
    <label>Name of Company (For Corporate Buyer)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>